--- a/views/campus.ejs
+++ b/views/campus.ejs
@@ -36,7 +36,7 @@
   </style>
 </head>
 
-<body class="page-campus">
+<body>
   <% const displayName=currentUser && currentUser.nickname ? currentUser.nickname : currentUser && currentUser.name ?
     currentUser.name : "링커" ; %>
 
