--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body class="home-page">
+<body>
   <% const displayName=currentUser && currentUser.nickname ? currentUser.nickname : currentUser && currentUser.name ?
     currentUser.name : "링커" ; %>
 
